--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -186,4 +186,6 @@
     <string name="most_listened_artists">Artisti più ascoltati</string>
     <string name="most_albums_listened">Album più ascoltati</string>
     <string name="most_played_playlists">Playlist più ascoltate</string>
+    <string name="languages">Lingue</string>
+    <string name="app_language">Lingua principale</string>
 </resources>
