--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -160,36 +160,36 @@
   <string name="quick_pics_and_tips">Rychlý výběr a Tipy</string>
   <string name="is_min_list_time_for_tips_or_quick_pics">To je minimální doba poslechu, aby bylo možné skladbu zařadit mezi možné Tipy nebo Rychlý výběr</string>
   <string name="min_listening_time">Minimální doba poslechu</string>
-    <string name="player_thumbnail_size">Thumbnail Size</string>
-  <string name="restarting_rimusic_is_required">Restarting is required</string>
-  <string name="size_name">Size</string>
-    <string name="current_size_name">"Current size "</string>
-  <string name="current_shape_name">Current shape</string>
-    <string name="i18_small">Small</string>
-  <string name="i18_medium">Medium</string>
-  <string name="i18_big">Big</string>
-  <string name="i18_none">None</string>
-  <string name="i18_light">Light</string>
-  <string name="i18_heavy">Heavy</string>
-  <string name="effects">Effects</string>
-  <string name="player_rotating_buttons">Rotating buttons</string>
-  <string name="player_enable_rotation_buttons">Enable rotation of buttons when clicked</string>
-    <string name="statistics">Statistics</string>
-  <string name="today">Today</string>
-  <string name="_1_week">1 Week</string>
-  <string name="_1_month">1 Month</string>
-  <string name="_3_month">3 month</string>
-  <string name="_6_month">6 Month</string>
-  <string name="_1_year">1 Year</string>
-  <string name="all">All</string>
-  <string name="most_played_songs">Most played songs</string>
-  <string name="most_listened_artists">Most listened artists</string>
-  <string name="most_albums_listened">Most albums listened</string>
-  <string name="most_played_playlists">Most played playlists</string>
-    <string name="languages">Languages</string>
-  <string name="app_language">App language</string>
-    <string name="in_alphabetical_order">In alphabetical order:</string>
-    <string name="contributors">CONTRIBUTORS</string>
-  <string name="troubleshooting">TROUBLESHOOTING</string>
-  <string name="social">SOCIAL</string>
+  <string name="player_thumbnail_size">Velikost miniatur</string>
+  <string name="restarting_rimusic_is_required">Je vyžadován restart</string>
+  <string name="size_name">Velikost</string>
+  <string name="current_size_name">"Současná velikost"</string>
+  <string name="current_shape_name">Současný tvar</string>
+  <string name="i18_small">Malý</string>
+  <string name="i18_medium">Střední</string>
+  <string name="i18_big">Velký</string>
+  <string name="i18_none">Žádný</string>
+  <string name="i18_light">Nevýrazný</string>
+  <string name="i18_heavy">Silný</string>
+  <string name="effects">Efekty</string>
+  <string name="player_rotating_buttons">Otáčení tlačítek</string>
+  <string name="player_enable_rotation_buttons">Povolit otáčení tlačítek při kliknutí</string>
+  <string name="statistics">Statistiky</string>
+  <string name="today">Dnes</string>
+  <string name="_1_week">1 týden</string>
+  <string name="_1_month">1 měsíc</string>
+  <string name="_3_month">3 měsíce</string>
+  <string name="_6_month">6 měsíců</string>
+  <string name="_1_year">1 rok</string>
+  <string name="all">Vše</string>
+  <string name="most_played_songs">Nejčastěji přehrávané skladby</string>
+  <string name="most_listened_artists">Nejčastěji poslouchaní interpreti</string>
+  <string name="most_albums_listened">Nejčastěji poslouchaná alba</string>
+  <string name="most_played_playlists">Nejčastěji přehrávané playlisty</string>
+  <string name="languages">Jazyky</string>
+  <string name="app_language">Jazyk aplikace</string>
+  <string name="in_alphabetical_order">V abecedním pořadí:</string>
+  <string name="contributors">PŘISPĚVATELÉ</string>
+  <string name="troubleshooting">ODSTRAŇOVÁNÍ PROBLÉMŮ</string>
+  <string name="social">SOCIÁLNÍ SÍŤ</string>
 </resources>
