--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -68,7 +68,7 @@
     <string name="theme">Tema</string>
     <string name="theme_mode">Modo de tema</string>
     <string name="shapes">FORMAS</string>
-    <string name="thumbnail_roundness">Redondez de las miniaturas</string>
+    <string name="thumbnail_roundness">Curvatura de las miniaturas</string>
     <string name="text">TEXTO</string>
     <string name="use_system_font">Usar fuentes del sistema</string>
     <string name="use_font_by_the_system">Utilizar la fuente aplicada por el sistema</string>
@@ -161,7 +161,7 @@
     <string name="is_min_list_time_for_tips_or_quick_pics">Es el tiempo de reproducción mínimo para incluir la canción como una posible recomendación o selección rápida</string>
     <string name="min_listening_time">Tiempo de reproducción mínimo</string>
     <string name="player_thumbnail_size">Tamaño de las miniaturas</string>
-    <string name="restarting_rimusic_is_required">Se requiere un reinicio</string>
+    <string name="restarting_rimusic_is_required">Es necesario reiniciar</string>
     <string name="size_name">Tamaño</string>
     <string name="current_size_name">"Tamaño actual "</string>
     <string name="current_shape_name">Forma actual</string>
@@ -174,23 +174,23 @@
     <string name="effects">Efectos</string>
     <string name="player_rotating_buttons">Rotación de los botones</string>
     <string name="player_enable_rotation_buttons">Activar la rotación de los botones al pulsar</string>
-    <string name="statistics">Statistics</string>
-    <string name="today">Today</string>
-    <string name="_1_week">1 Week</string>
-    <string name="_1_month">1 Month</string>
-    <string name="_3_month">3 month</string>
-    <string name="_6_month">6 Month</string>
-    <string name="_1_year">1 Year</string>
-    <string name="all">All</string>
-    <string name="most_played_songs">Most played songs</string>
-    <string name="most_listened_artists">Most listened artists</string>
-    <string name="most_albums_listened">Most albums listened</string>
-    <string name="most_played_playlists">Most played playlists</string>
-    <string name="languages">Languages</string>
-    <string name="app_language">App language</string>
-    <string name="in_alphabetical_order">In alphabetical order:</string>
-    <string name="contributors">CONTRIBUTORS</string>
-    <string name="troubleshooting">TROUBLESHOOTING</string>
+    <string name="statistics">Estadísticas</string>
+    <string name="today">Hoy</string>
+    <string name="_1_week">1 semana</string>
+    <string name="_1_month">1 mes</string>
+    <string name="_3_month">3 meses</string>
+    <string name="_6_month">6 meses</string>
+    <string name="_1_year">1 año</string>
+    <string name="all">Todo</string>
+    <string name="most_played_songs">Canciones más escuchadas</string>
+    <string name="most_listened_artists">Artistas más escuchados</string>
+    <string name="most_albums_listened">Álbumes más escuchados</string>
+    <string name="most_played_playlists">Listas de reproducción más escuchadas</string>
+    <string name="languages">Idiomas</string>
+    <string name="app_language">Idioma de la aplicación</string>
+    <string name="in_alphabetical_order">En orden alfabético:</string>
+    <string name="contributors">Colaboradores</string>
+    <string name="troubleshooting">RESOLUCIÓN DE PROBLEMAS</string>
     <string name="social">SOCIAL</string>
 
 </resources>
