--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -13,7 +13,7 @@
         <string name="remove_from_queue">Aus der Warteschlange entfernen</string>
         <string name="remove_from_playlist">Aus der Wiedergabeliste entfernen</string>
         <string name="hide">Löschen</string>
-        <string name="hide_from_quick_picks">Löschen von \"Schnellauswahl\"</string>
+        <string name="hide_from_quick_picks">Löschen von \"Entdecken\"</string>
         <string name="related_albums">Ähnliche Alben</string>
         <string name="similar_artists">Ähnliche Künstler</string>
         <string name="playlists_you_might_like">Wiedergabelisten, die dir gefallen könnten</string>
@@ -24,7 +24,7 @@
         <string name="playlists">Wiedergabelisten</string>
         <string name="favorites">Favoriten</string>
         <string name="offline">Offline</string>
-        <string name="quick_picks">Schnellauswahl</string>
+        <string name="quick_picks">Entdecken</string>
         <string name="songs">Songs</string>
         <string name="other_versions">Alternative Versionen</string>
         <string name="album_no_alternative_version">Dieses Album hat keine alternative Version</string>
@@ -54,7 +54,7 @@
         <string name="loudness">Lautstärke</string>
         <string name="clear">Löschen</string>
         <string name="error">Es ist ein Fehler aufgetreten.</string>
-        <string name="enter_a_name">Nach Künstlern, Songs, Alben usw. suchen</string>
+        <string name="enter_a_name">Suchen</string>
         <string name="online">Online</string>
         <string name="no_results_found">Keine Ergebnisse gefunden. Bitte versuchen Sie eine andere Suchanfrage oder Kategorie</string>
         <string name="videos">Videos</string>
@@ -83,8 +83,8 @@
         <string name="max_size">Max. Größe</string>
         <string name="song_cache">Song Zwischenspeicher</string>
         <string name="database">Datenbank</string>
-        <string name="reset_quick_picks">Zurücksetzen der Schnellauswahl</string>
-        <string name="quick_picks_are_cleared">Schnellauswahl wird gelöscht</string>
+        <string name="reset_quick_picks">Zurücksetzen der Entdecken-Auswahl</string>
+        <string name="quick_picks_are_cleared">Entdecken-Auswahl wird gelöscht</string>
         <string name="backup">Sicherung</string>
         <string name="personal_preference">Persönliche Einstellungen (z.B. der Theme-Modus) und der Zwischenspeicher sind ausgeschlossen.</string>
         <string name="backup_1">Sichern</string>
@@ -112,7 +112,7 @@
         <string name="turning_off_battery_optimizations_is_not_enough">Wenn Ausschalten der Akku-Optimierungen nicht ausreicht</string>
         <string name="player_audio"><![CDATA[Player & Audio]]></string>
         <string name="player">Player</string>
-        <string name="persistent_queue">Persistente Warteschlange</string>
+        <string name="persistent_queue">Dauerhafte Warteschlange</string>
         <string name="save_and_restore_playing_songs">Speichern und Wiederherstellen der Wiedergabe von Songs</string>
         <string name="resume_playback">Wiedergabe fortzusetzen</string>
         <string name="when_device_is_connected">Wenn ein kabelgebundenes oder Bluetooth-Gerät verbunden ist</string>
@@ -122,7 +122,7 @@
         <string name="loudness_normalization">Lautstärkeanpassung</string>
         <string name="autoadjust_the_volume">Stellen Sie die Lautstärke auf ein festes Niveau ein</string>
         <string name="interact_with_the_system_equalizer">Interagieren Sie mit dem System-Equalizer</string>
-        <string name="about">Über</string>
+        <string name="about">Info</string>
         <string name="more_of">Mehr von</string>
         <string name="sleep_timer">Schlaf-Timer</string>
         <string name="left">%1$s übrigen</string>
@@ -157,8 +157,8 @@
         <string name="error_an_unknown_playback_error_has_occurred">Es ist ein unbekannter Wiedergabefehler aufgetreten</string>
     <string name="tips">Tips</string>
     <string name="next_playing">Wird als nächstes gespielt...</string>
-    <string name="quick_pics_and_tips">Schnellauswahl und Tipps</string>
-        <string name="is_min_list_time_for_tips_or_quick_pics">Minimale Hördauer, um den Song als mögliche Tipps oder Schnellauswahl aufzunehmen</string>
+    <string name="quick_pics_and_tips">Entdecken und Tipps</string>
+        <string name="is_min_list_time_for_tips_or_quick_pics">Minimale Hördauer, um den Song als mögliche Tipps oder Entdecken-Auswahl aufzunehmen</string>
         <string name="min_listening_time">Minimale Hördauer</string>
     <string name="player_thumbnail_size">Größe der Vorschaubilder</string>
         <string name="restarting_rimusic_is_required">Neustart ist erforderlich</string>
@@ -171,25 +171,25 @@
         <string name="i18_none">Keine</string>
         <string name="i18_light">Leicht</string>
         <string name="i18_heavy">Stark</string>
-    <string name="effects">Effects</string>
-    <string name="player_rotating_buttons">Rotating buttons</string>
-    <string name="player_enable_rotation_buttons">Enable rotation of buttons when clicked</string>
-    <string name="statistics">Statistics</string>
-    <string name="today">Today</string>
-    <string name="_1_week">1 Week</string>
-    <string name="_1_month">1 Month</string>
-    <string name="_3_month">3 month</string>
-    <string name="_6_month">6 Month</string>
-    <string name="_1_year">1 Year</string>
-    <string name="all">All</string>
-    <string name="most_played_songs">Most played songs</string>
-    <string name="most_listened_artists">Most listened artists</string>
-    <string name="most_albums_listened">Most albums listened</string>
-    <string name="most_played_playlists">Most played playlists</string>
-    <string name="languages">Languages</string>
-    <string name="app_language">App language</string>
-    <string name="in_alphabetical_order">In alphabetical order:</string>
-    <string name="contributors">CONTRIBUTORS</string>
-    <string name="troubleshooting">TROUBLESHOOTING</string>
+    <string name="effects">Effekte</string>
+    <string name="player_rotating_buttons">Rotierende Tasten</string>
+    <string name="player_enable_rotation_buttons">Rotation von Tasten beim Anklicken aktivieren</string>
+    <string name="statistics">Statistik</string>
+    <string name="today">Heute</string>
+    <string name="_1_week">1 Woche</string>
+    <string name="_1_month">1 Monat</string>
+    <string name="_3_month">3 Monate</string>
+    <string name="_6_month">6 Monate</string>
+    <string name="_1_year">1 Jahr</string>
+    <string name="all">Gesammt</string>
+    <string name="most_played_songs">Meist gehörte Songs</string>
+    <string name="most_listened_artists">Meist gehörte Künstler</string>
+    <string name="most_albums_listened">Meiste gehörte Alben</string>
+    <string name="most_played_playlists">Meist gehörte Wiedergabelisten</string>
+    <string name="languages">Sprache</string>
+    <string name="app_language">App-Sprache</string>
+    <string name="in_alphabetical_order">In alphabetischer Reihenfolge:</string>
+    <string name="contributors">Mitwirkende(r)</string>
+    <string name="troubleshooting">FEHLERSUCHE</string>
     <string name="social">SOCIAL</string>
 </resources>
