Fix a forgotten translation
Fix a forgotten translation

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -63,7 +63,7 @@
     <string name="report_an_issue">Signaler un problème</string>
     <string name="you_will_be_redirected_to_github">Vous allez être redirigé vers GitHub</string>
     <string name="request_a_feature_or_suggest_an_idea">Demander une fonctionnalité ou suggérer une idée</string>
-    <string name="appearance">Appearance</string>
+    <string name="appearance">Apparence</string>
     <string name="colors">COULEURS</string>
     <string name="theme">Thème</string>
     <string name="theme_mode">Thème Système</string>
