--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -165,12 +165,12 @@
         <string name="size_name">Größe</string>
     <string name="current_size_name">"Aktuelle Größe "</string>
         <string name="current_shape_name">Aktuelle Form</string>
-    <string name="i18_small">Klein</string>
-        <string name="i18_medium">Mittel</string>
-        <string name="i18_big">Groß</string>
-        <string name="i18_none">Keine</string>
-        <string name="i18_light">Leicht</string>
-        <string name="i18_heavy">Stark</string>
+    <string name="small">Klein</string>
+        <string name="medium">Mittel</string>
+        <string name="big">Groß</string>
+        <string name="none">Keine</string>
+        <string name="light">Leicht</string>
+        <string name="heavy">Stark</string>
     <string name="effects">Effekte</string>
     <string name="player_rotating_buttons">Rotierende Tasten</string>
     <string name="player_enable_rotation_buttons">Rotation von Tasten beim Anklicken aktivieren</string>
@@ -192,4 +192,17 @@
     <string name="contributors">Mitwirkende(r)</string>
     <string name="troubleshooting">FEHLERSUCHE</string>
     <string name="social">SOCIAL</string>
+    <string name="english">English</string>
+    <string name="italian">Italian</string>
+    <string name="czech">Czech</string>
+    <string name="german">German</string>
+    <string name="spanish">Spanish</string>
+    <string name="french">French</string>
+    <string name="romanian">Romanian</string>
+    <string name="russian">Russian</string>
+    <string name="turkish">Turkish</string>
+    <string name="dark">Dark</string>
+    <string name="system">System</string>
+    <string name="unlimited">Unlimited</string>
+    <string name="_light">Light</string>
 </resources>
