--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -165,12 +165,12 @@
     <string name="size_name">Tamaño</string>
     <string name="current_size_name">"Tamaño actual "</string>
     <string name="current_shape_name">Forma actual</string>
-    <string name="i18_small">Pequeño</string>
-    <string name="i18_medium">Mediano</string>
-    <string name="i18_big">Grande</string>
-    <string name="i18_none">Ninguno</string>
-    <string name="i18_light">Ligero</string>
-    <string name="i18_heavy">Elevado</string>
+    <string name="small">Pequeño</string>
+    <string name="medium">Mediano</string>
+    <string name="big">Grande</string>
+    <string name="none">Ninguno</string>
+    <string name="light">Ligero</string>
+    <string name="heavy">Elevado</string>
     <string name="effects">Efectos</string>
     <string name="player_rotating_buttons">Rotación de los botones</string>
     <string name="player_enable_rotation_buttons">Activar la rotación de los botones al pulsar</string>
@@ -192,5 +192,18 @@
     <string name="contributors">Colaboradores</string>
     <string name="troubleshooting">RESOLUCIÓN DE PROBLEMAS</string>
     <string name="social">SOCIAL</string>
+    <string name="english">English</string>
+    <string name="italian">Italian</string>
+    <string name="czech">Czech</string>
+    <string name="german">German</string>
+    <string name="spanish">Spanish</string>
+    <string name="french">French</string>
+    <string name="romanian">Romanian</string>
+    <string name="russian">Russian</string>
+    <string name="turkish">Turkish</string>
+    <string name="dark">Dark</string>
+    <string name="system">System</string>
+    <string name="unlimited">Unlimited</string>
+    <string name="_light">Light</string>
 
 </resources>
