--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -165,12 +165,12 @@
     <string name="size_name">Dimensiune</string>
     <string name="current_size_name">"Dimensiunea curentă "</string>
     <string name="current_shape_name">Formă curentă</string>
-    <string name="i18_small">Mic</string>
-    <string name="i18_medium">Mediu</string>
-    <string name="i18_big">Mare</string>
-    <string name="i18_none">Nici unul</string>
-    <string name="i18_light">Lumina</string>
-    <string name="i18_heavy">Foarte mare</string>
+    <string name="small">Mic</string>
+    <string name="medium">Mediu</string>
+    <string name="big">Mare</string>
+    <string name="none">Nici unul</string>
+    <string name="light">Lumina</string>
+    <string name="heavy">Foarte mare</string>
     <string name="effects">Efecte</string>
     <string name="player_rotating_buttons">Butoane rotative</string>
     <string name="player_enable_rotation_buttons">Activați rotația butoanelor când se face clic pe ele</string>
@@ -192,5 +192,18 @@
     <string name="contributors">CONTRIBUTORS</string>
     <string name="troubleshooting">TROUBLESHOOTING</string>
     <string name="social">SOCIAL</string>
+    <string name="english">English</string>
+    <string name="italian">Italian</string>
+    <string name="czech">Czech</string>
+    <string name="german">German</string>
+    <string name="spanish">Spanish</string>
+    <string name="french">French</string>
+    <string name="romanian">Romanian</string>
+    <string name="russian">Russian</string>
+    <string name="turkish">Turkish</string>
+    <string name="dark">Dark</string>
+    <string name="system">System</string>
+    <string name="unlimited">Unlimited</string>
+    <string name="_light">Light</string>
 
 </resources>
