--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -205,5 +205,6 @@
     <string name="system">System</string>
     <string name="unlimited">Unlimited</string>
     <string name="_light">Light</string>
+    <string name="downloaded">Downloaded</string>
 
 </resources>
