--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -205,4 +205,5 @@
     <string name="system">Sistema</string>
     <string name="unlimited">Illimitato</string>
     <string name="_light">Chiaro</string>
+    <string name="downloaded">Scaricati</string>
 </resources>
