--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -192,4 +192,18 @@
     <string name="contributors">СОТРУДНИКИ</string>
     <string name="troubleshooting">ПОИСК И УСТРАНЕНИЕ НЕИСПРАВНОСТЕЙ</string>
     <string name="social">СОЦИАЛЬНОЕ</string>
+    <string name="english">English</string>
+    <string name="italian">Italian</string>
+    <string name="czech">Czech</string>
+    <string name="german">German</string>
+    <string name="spanish">Spanish</string>
+    <string name="french">French</string>
+    <string name="romanian">Romanian</string>
+    <string name="russian">Russian</string>
+    <string name="turkish">Turkish</string>
+    <string name="dark">Dark</string>
+    <string name="system">System</string>
+    <string name="unlimited">Unlimited</string>
+    <string name="_light">Light</string>
+    <string name="downloaded">Downloaded</string>
 </resources>
