Updated Romania Language
Updated Romania Language

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -14,7 +14,7 @@
     <string name="remove_from_playlist">Elimină din lista de redare</string>
     <string name="hide">Ascunde</string>
     <string name="hide_from_quick_picks">Ascunde din \"Selecții rapide\"</string>
-    <string name="related_albums">Albume asociate</string>
+    <string name="related_albums">Albume similare</string>
     <string name="similar_artists">Artiști similari</string>
     <string name="playlists_you_might_like">Liste de redare care ți-ar putea plăcea</string>
     <string name="an_error_has_occurred">A apărut o eroare</string>
@@ -66,12 +66,12 @@
     <string name="appearance">Aspect</string>
     <string name="colors">CULORI</string>
     <string name="theme">Temă</string>
-    <string name="theme_mode">Mod temă</string>
+    <string name="theme_mode">Culoare temă</string>
     <string name="shapes">FORME</string>
     <string name="thumbnail_roundness">Rotunjimea miniaturilor</string>
     <string name="text">TEXT</string>
     <string name="use_system_font">Utilizează fontul sistemului</string>
-    <string name="use_font_by_the_system">Utilizează fontul aplicat de sistem</string>
+    <string name="use_font_by_the_system">Utilizează fontul utilizat de sistem</string>
     <string name="apply_font_padding">Aplică spațiere între fonturi</string>
     <string name="add_spacing_around_texts">Adaugă spațiere în jurul textelor</string>
     <string name="lockscreen">ECRAN DE BLOCARE</string>
@@ -86,15 +86,15 @@
     <string name="reset_quick_picks">Resetează selecțiile rapide</string>
     <string name="quick_picks_are_cleared">Selecțiile rapide au fost resetate</string>
     <string name="backup">COPIE DE REZERVĂ</string>
-    <string name="personal_preference">Preferințe personale (de ex: Mod temă) și memoria cache sunt excluse.</string>
+    <string name="personal_preference">Preferințe personale (de ex: Culoare temă) memoria cache este exclusă.</string>
     <string name="backup_1">Copie de rezervă</string>
     <string name="export_the_database">Exportează baza de date pe stocarea externă</string>
     <string name="restore">RESTABILIRE</string>
     <string name="restore_1">Restaurează</string>
     <string name="import_the_database">Importă baza de date din stocarea externă</string>
-    <string name="other">Altul</string>
+    <string name="other">Altele</string>
     <string name="android_auto">ANDROID AUTO</string>
-    <string name="enable_unknown_sources">Amintiți-vă să activați \"Surse necunoscute\" în Setări pentru dezvoltatori din Android Auto.</string>
+    <string name="enable_unknown_sources">Amintiți-vă să activați \"Surse necunoscute\" în Setările dezvoltator din Android Auto.</string>
     <string name="android_auto_1">Android Auto</string>
     <string name="enable_android_auto_support">Activează suportul pentru Android Auto</string>
     <string name="search_history">ISTORICUL CĂUTĂRILOR</string>
@@ -103,8 +103,8 @@
     <string name="clear_search_history">Șterge istoricul căutărilor</string>
     <string name="history_is_empty">Istoricul este gol</string>
     <string name="service_lifetime">DURATA DE VIAȚĂ A SERVICILOR</string>
-    <string name="battery_optimizations_applied">Dacă sunt aplicate optimizări ale bateriei, notificarea de redare poate dispărea brusc atunci când este întreruptă.</string>
-    <string name="is_android12">De când Android 12, dezactivarea optimizărilor bateriei este necesară pentru ca opțiunea \"Serviciu invincibil\" să aibă efect.</string>
+    <string name="battery_optimizations_applied">Dacă sunt aplicate optimizările ale bateriei, notificarea de redare poate dispărea atunci când este întreruptă.</string>
+    <string name="is_android12">Pe Android 12 sau mai nou, dezactivarea optimizărilor bateriei este necesară pentru ca opțiunea \"Serviciu invincibil\" să aibă efect.</string>
     <string name="ignore_battery_optimizations">Ignoră optimizările bateriei</string>
     <string name="already_unrestricted">Deaja fara restrictii</string>
     <string name="disable_background_restrictions">Dezactivați restricțiile de fundal</string>
@@ -121,9 +121,9 @@
     <string name="skip_silent_parts_during_playback">Sări peste părțile silențioase în timpul redării</string>
     <string name="loudness_normalization">Normalizarea sunetului</string>
     <string name="autoadjust_the_volume">Reglați volumul la un nivel fix</string>
-    <string name="interact_with_the_system_equalizer">Interacționați cu egalizatorul sistemului</string>
-    <string name="about">Despre</string>
-    <string name="more_of">Mai mult de</string>
+    <string name="interact_with_the_system_equalizer">Deschideți egalizatorul sistemului</string>
+    <string name="about">Informații</string>
+    <string name="more_of">Profilul lui</string>
     <string name="sleep_timer">Timpul de repaus</string>
     <string name="left">mai rămân %1$s</string>
     <string name="set">Setează</string>
@@ -135,17 +135,17 @@
     <string name="provided_by">Furnizat de</string>
     <string name="cleanup">CURĂȚENIE</string>
     <string name="delete_playback_events">Ștergeți %1$s evenimente de redare</string>
-    <string name="existing_data_will_be_overwritten">Datele existente vor fi suprascrise.\n%1$s se va închide automat după restaurarea bazei de date.</string>
+    <string name="existing_data_will_be_overwritten">Datele existente vor fi suprascrise.\n%1$s se va închide automat după restabilirea bazei de date.</string>
     <string name="on_queue">în coadă</string>
     <string name="folder_cache">FOLDER CACHE</string>
-    <string name="cache_reset_by_clicking_button">Atenție! făcând clic pe butonul de mai jos, folderul locației cache va fi resetat la cel implicit</string>
+    <string name="cache_reset_by_clicking_button">Atenție! Făcând clic pe butonul de mai jos, folderul cache va fi resetat!</string>
     <string name="cache_location_folder">Locație folder</string>
-    <string name="custom_cache_from_android_10_may_not_be_available">De când Android 10, această funcție poate să nu fie disponibilă</string>
-    <string name="reset_cache_location_folder">RESETARE FOLDERUL DE LOCAȚIE CACHE</string>
+    <string name="custom_cache_from_android_10_may_not_be_available">Pe Android 10 sau mai nou, această funcție poate să nu fie disponibilă</string>
+    <string name="reset_cache_location_folder">RESETARE FOLDERUL CACHE</string>
     <string name="used">" utilizat"</string>
     <string name="now_playing">Se redă acum...</string>
     <string name="close_background_player">Închideți playerul de fundal</string>
-    <string name="when_app_swipe_out_from_task_manager">Când aplicația este stearsa din managerul de sarcini</string>
+    <string name="when_app_swipe_out_from_task_manager">Când aplicația este închisă din fundal</string>
     <string name="opening_url">se încarcă...</string>
     <string name="an_error_has_occurred_while_fetching_the_lyrics">A apărut o eroare la preluarea versurilor</string>
     <string name="are_not_available_for_this_song">nu sunt disponibile pentru această melodie</string>
@@ -155,16 +155,16 @@
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Această melodie nu poate fi redată din cauza restricțiilor serverilor</string>
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">ID-ul videoclipului întors nu se potrivește cu cel solicitat</string>
     <string name="error_an_unknown_playback_error_has_occurred">A apărut o eroare de redare necunoscută</string>
-    <string name="tips">Sfaturi</string>
+    <string name="tips">Recomandări</string>
     <string name="next_playing">Redare următoare...</string>
-    <string name="quick_pics_and_tips">Sfaturi și Selecții rapide</string>
-    <string name="is_min_list_time_for_tips_or_quick_pics">Este timpul minim de ascultare pentru a include melodia ca Sfat sau Selecție rapidă posibilă</string>
+    <string name="quick_pics_and_tips">Recomandări și Selecții rapide</string>
+    <string name="is_min_list_time_for_tips_or_quick_pics">Este timpul minim de ascultat pentru a include melodia ca Sfat sau Selecție rapidă</string>
     <string name="min_listening_time">Timp minim de ascultare</string>
     <string name="player_thumbnail_size">Dimensiune miniatură</string>
     <string name="restarting_rimusic_is_required">Este necesară repornirea aplicației</string>
     <string name="size_name">Dimensiune</string>
     <string name="current_size_name">"Dimensiunea curentă "</string>
-    <string name="current_shape_name">Formă curentă</string>
+    <string name="current_shape_name">Forma curentă folosită</string>
     <string name="i18_small">Mic</string>
     <string name="i18_medium">Mediu</string>
     <string name="i18_big">Mare</string>
@@ -174,23 +174,22 @@
     <string name="effects">Efecte</string>
     <string name="player_rotating_buttons">Butoane rotative</string>
     <string name="player_enable_rotation_buttons">Activați rotația butoanelor când se face clic pe ele</string>
-    <string name="statistics">Statistics</string>
-    <string name="today">Today</string>
-    <string name="_1_week">1 Week</string>
-    <string name="_1_month">1 Month</string>
-    <string name="_3_month">3 month</string>
-    <string name="_6_month">6 Month</string>
-    <string name="_1_year">1 Year</string>
-    <string name="all">All</string>
-    <string name="most_played_songs">Most played songs</string>
+    <string name="statistics">Statistici</string>
+    <string name="today">Azi</string>
+    <string name="_1_week">O Săptămână</string>
+    <string name="_1_month">O Lună</string>
+    <string name="_3_month">3 Luni</string>
+    <string name="_6_month">6 Luni</string>
+    <string name="_1_year">Un An</string>
+    <string name="all">Complet</string>
+    <string name="most_played_songs">Melodiile cele mai ascultate</string>
     <string name="most_listened_artists">Most listened artists</string>
     <string name="most_albums_listened">Most albums listened</string>
     <string name="most_played_playlists">Most played playlists</string>
-    <string name="languages">Languages</string>
-    <string name="app_language">App language</string>
-    <string name="in_alphabetical_order">In alphabetical order:</string>
-    <string name="contributors">CONTRIBUTORS</string>
-    <string name="troubleshooting">TROUBLESHOOTING</string>
+    <string name="languages">Limbi</string>
+    <string name="app_language">Limba aplicației</string>
+    <string name="in_alphabetical_order">In ordinea alfabetică:</string>
+    <string name="contributors">CONTRIBUITORI</string>
+    <string name="troubleshooting">DEPANARE</string>
     <string name="social">SOCIAL</string>
-
 </resources>
