Download cache Improvements Implemented swipe to remove from queue

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -206,5 +206,6 @@
     <string name="unlimited">Unlimited</string>
     <string name="_light">Light</string>
     <string name="downloaded">Downloaded</string>
+    <string name="turn_off">Turn off</string>
 
 </resources>
