--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -206,4 +206,5 @@
     <string name="unlimited">Illimitato</string>
     <string name="_light">Chiaro</string>
     <string name="downloaded">Scaricati</string>
+    <string name="turn_off">Disattiva</string>
 </resources>
