--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -206,4 +206,5 @@
     <string name="unlimited">Unlimited</string>
     <string name="_light">Light</string>
     <string name="downloaded">Downloaded</string>
+    <string name="turn_off">Turn off</string>
 </resources>
