--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,7 +16,7 @@
     <string name="hide_from_quick_picks">Cacher de la \"Sélections rapides\"</string>
     <string name="related_albums">Albums associés</string>
     <string name="similar_artists">Artistes similaires</string>
-    <string name="playlists_you_might_like">Listes de lecture que vous pourriez aimer :3</string>
+    <string name="playlists_you_might_like">Listes de lecture que vous pourriez aimer ❤</string>
     <string name="an_error_has_occurred">Une erreur est survenue</string>
     <string name="albums">Albums</string>
     <string name="artists">Artistes</string>
@@ -189,23 +189,23 @@
     <string name="languages">Langues</string>
     <string name="app_language">Langues de l\'application</string>
     <string name="in_alphabetical_order">Dans l\'ordre alphabétique :</string>
-    <string name="contributors">CONTRIBUTEURS</string>
+    <string name="contributors">CONTRIBUTEURS ❤</string>
     <string name="troubleshooting">DÉPANNAGE</string>
     <string name="social">SOCIAL</string>
-    <string name="english">English</string>
-    <string name="italian">Italian</string>
-    <string name="czech">Czech</string>
-    <string name="german">German</string>
-    <string name="spanish">Spanish</string>
-    <string name="french">French</string>
-    <string name="romanian">Romanian</string>
-    <string name="russian">Russian</string>
-    <string name="turkish">Turkish</string>
-    <string name="dark">Dark</string>
-    <string name="system">System</string>
-    <string name="unlimited">Unlimited</string>
-    <string name="_light">Light</string>
-    <string name="downloaded">Downloaded</string>
-    <string name="turn_off">Turn off</string>
+    <string name="english">Anglais</string>
+    <string name="italian">Italien</string>
+    <string name="czech">Tchèque</string>
+    <string name="german">Allemand</string>
+    <string name="spanish">Espagnol</string>
+    <string name="french">Français</string>
+    <string name="romanian">Roumain</string>
+    <string name="russian">Russe</string>
+    <string name="turkish">Turc</string>
+    <string name="dark">Sombre</string>
+    <string name="system">Système</string>
+    <string name="unlimited">Illimité</string>
+    <string name="_light">Clair</string>
+    <string name="downloaded">Téléchargé</string>
+    <string name="turn_off">Desactivé</string>
 
 </resources>
