--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -189,23 +189,23 @@
     <string name="languages">Idiomas</string>
     <string name="app_language">Idioma de la aplicación</string>
     <string name="in_alphabetical_order">En orden alfabético:</string>
-    <string name="contributors">Colaboradores</string>
+    <string name="contributors">COLABORADORES</string>
     <string name="troubleshooting">RESOLUCIÓN DE PROBLEMAS</string>
     <string name="social">SOCIAL</string>
-    <string name="english">English</string>
-    <string name="italian">Italian</string>
-    <string name="czech">Czech</string>
-    <string name="german">German</string>
-    <string name="spanish">Spanish</string>
-    <string name="french">French</string>
-    <string name="romanian">Romanian</string>
-    <string name="russian">Russian</string>
-    <string name="turkish">Turkish</string>
-    <string name="dark">Dark</string>
-    <string name="system">System</string>
-    <string name="unlimited">Unlimited</string>
-    <string name="_light">Light</string>
-    <string name="downloaded">Downloaded</string>
-    <string name="turn_off">Turn off</string>
+    <string name="english">Inglés</string>
+    <string name="italian">Italiano</string>
+    <string name="czech">Checo</string>
+    <string name="german">Alemán</string>
+    <string name="spanish">Español</string>
+    <string name="french">Francés</string>
+    <string name="romanian">Rumano</string>
+    <string name="russian">Ruso</string>
+    <string name="turkish">Turco</string>
+    <string name="dark">Oscuro</string>
+    <string name="system">Sistema</string>
+    <string name="unlimited">Ilimitado</string>
+    <string name="_light">Claro</string>
+    <string name="downloaded">Descargado</string>
+    <string name="turn_off">Desactivar</string>
 
 </resources>
