--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -75,7 +75,7 @@
         <string name="apply_font_padding">Textabstände</string>
         <string name="add_spacing_around_texts">Textabstände hinzufügen</string>
         <string name="lockscreen">Sperbildschirm</string>
-        <string name="show_song_cover">Song Cover anzeigen</string>
+        <string name="show_song_cover">Songcover anzeigen</string>
         <string name="use_song_cover_on_lockscreen">Songcover auf dem Sperrbildschirm verwenden</string>
         <string name="cache">Zwischenspeicher</string>
         <string name="cache_cleared">Wenn der Zwischenspeicher keinen Speicherplatz mehr hat, werden die Ressourcen, auf die am längsten nicht zugegriffen wurde, gelöscht</string>
@@ -130,23 +130,23 @@
         <string name="play_next">Als nächstes wiedergeben</string>
         <string name="confirm">Bestätigen</string>
         <string name="show">Zeigen</string>
-        <string name="unsynchronized_lyrics">unsynchronisierten lyrics</string>
-        <string name="synchronized_lyrics">synchronisiert lyrics</string>
+        <string name="unsynchronized_lyrics">Unsynchronisierten lyrics</string>
+        <string name="synchronized_lyrics">Synchronisiert lyrics</string>
         <string name="provided_by">Bildmaterial von</string>
         <string name="cleanup">Zurücksetzen</string>
         <string name="delete_playback_events">Löschen %1$s Wiedergabeereignisse</string>
         <string name="existing_data_will_be_overwritten">Vorhandene Daten werden überschrieben.\n%1$s schließt sich automatisch nach dem Wiederherstellen der Datenbank.</string>
-        <string name="on_queue">in der Warteschlange</string>
+        <string name="on_queue">In der Warteschlange</string>
     <string name="folder_cache">Zwischenspeicher-Ort</string>
         <string name="cache_reset_by_clicking_button">Achtung, wenn Sie auf die Schaltfläche unten klicken, wird der Zwischenspeicher-Ordner auf die Standardeinstellung zurückgesetzt</string>
         <string name="cache_location_folder">Standortordner</string>
         <string name="custom_cache_from_android_10_may_not_be_available">Ab Android 10 ist diese Funktion möglicherweise nicht mehr verfügbar</string>
         <string name="reset_cache_location_folder">Zwischenspeicher-Ordner Zurücksetzen</string>
-    <string name="used">"verwendet"</string>
+    <string name="used">" verwendet"</string>
     <string name="now_playing">Jetzt wird gespielt...</string>
     <string name="close_background_player">Hintergrund-Player schließen</string>
         <string name="when_app_swipe_out_from_task_manager">Wenn die Anwendung im Task-Manager geschlossen wird</string>
-    <string name="opening_url">wird geladen...</string>
+    <string name="opening_url">Wird geladen...</string>
     <string name="an_error_has_occurred_while_fetching_the_lyrics">Beim Abrufen des Liedtextes ist ein Fehler aufgetreten</string>
     <string name="are_not_available_for_this_song">sind für dieses Lied nicht verfügbar</string>
         <string name="error_a_network_error_has_occurred">Es ist ein Netzwerkfehler aufgetreten</string>
@@ -203,8 +203,8 @@
     <string name="turkish">Turkish</string>
     <string name="dark">Dark</string>
     <string name="system">System</string>
-    <string name="unlimited">Unlimited</string>
+    <string name="unlimited">Unbegrenzt</string>
     <string name="_light">Light</string>
-    <string name="downloaded">Downloaded</string>
-    <string name="turn_off">Turn off</string>
+    <string name="downloaded">Zwischengespeichert</string>
+    <string name="turn_off">Ausschalten</string>
 </resources>
