Added Polish translation
Added Polish translation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -201,6 +201,7 @@
     <string name="romanian">Romanian</string>
     <string name="russian">Russian</string>
     <string name="turkish">Turkish</string>
+    <string name="polish">Polish</string>
     <string name="dark">Dark</string>
     <string name="system">System</string>
     <string name="unlimited">Unlimited</string>
