--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string name="cancel">Zrušit</string>
   <string name="done">Hotovo</string>
@@ -192,19 +192,19 @@
   <string name="contributors">PŘISPĚVATELÉ</string>
   <string name="troubleshooting">ODSTRAŇOVÁNÍ PROBLÉMŮ</string>
   <string name="social">SOCIÁLNÍ SÍŤ</string>
-    <string name="english">English</string>
-    <string name="italian">Italian</string>
-  <string name="czech">Czech</string>
-  <string name="german">German</string>
-  <string name="spanish">Spanish</string>
-  <string name="french">French</string>
-  <string name="romanian">Romanian</string>
-  <string name="russian">Russian</string>
-  <string name="turkish">Turkish</string>
-    <string name="dark">Dark</string>
-  <string name="system">System</string>
-    <string name="unlimited">Unlimited</string>
-    <string name="_light">Light</string>
-    <string name="downloaded">Downloaded</string>
-    <string name="turn_off">Turn off</string>
+  <string name="english">Angličtina (English)</string>
+  <string name="italian">Italština (Italiano)</string>
+  <string name="czech">Čeština</string>
+  <string name="german">Němčina (Deutsch)</string>
+  <string name="spanish">Španělština (Español)</string>
+  <string name="french">Francouzština (Français)</string>
+  <string name="romanian">Rumunština (Română)</string>
+  <string name="russian">Ruština (Русский)</string>
+  <string name="turkish">Turečtina (Türkçe)</string>
+  <string name="dark">Tmavý</string>
+  <string name="system">Podle systému</string>
+  <string name="unlimited">Neomezený</string>
+  <string name="_light">Světlý</string>
+  <string name="downloaded">Stažený</string>
+  <string name="turn_off">Vypnout</string>
 </resources>
