Updated Polish translation

--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -201,6 +201,7 @@
   <string name="romanian">Rumunština (Română)</string>
   <string name="russian">Ruština (Русский)</string>
   <string name="turkish">Turečtina (Türkçe)</string>
+  <string name="polish">Polish</string>
   <string name="dark">Tmavý</string>
   <string name="system">Podle systému</string>
   <string name="unlimited">Neomezený</string>
