--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -201,6 +201,7 @@
     <string name="romanian">Rumano</string>
     <string name="russian">Ruso</string>
     <string name="turkish">Turco</string>
+    <string name="polish">Polish</string>
     <string name="dark">Oscuro</string>
     <string name="system">Sistema</string>
     <string name="unlimited">Ilimitado</string>
