--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -201,6 +201,7 @@
     <string name="romanian">Roumain</string>
     <string name="russian">Russe</string>
     <string name="turkish">Turc</string>
+    <string name="polish">Polish</string>
     <string name="dark">Sombre</string>
     <string name="system">Système</string>
     <string name="unlimited">Illimité</string>
