--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -201,6 +201,7 @@
     <string name="romanian">Rumeno</string>
     <string name="russian">Russo</string>
     <string name="turkish">Turco</string>
+    <string name="polish">Polish</string>
     <string name="dark">Scuro</string>
     <string name="system">Sistema</string>
     <string name="unlimited">Illimitato</string>
