--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -120,7 +120,7 @@
     <string name="skip_silence">Pomiń ciszę</string>
     <string name="skip_silent_parts_during_playback">Pomiń fragmenty bez dźwięku w trakcie odtwarzania</string>
     <string name="loudness_normalization">Normalizacja głośności</string>
-    <string name="autoadjust_the_volume">Dostosuj głośność do stałego poziomu</string>
+    <string name="autoadjust_the_volume">Utrzymuj głośność na stałym poziomie</string>
     <string name="interact_with_the_system_equalizer">Otwórz systemowy equalizer</string>
     <string name="about">O aplikacji</string>
     <string name="more_of">Więcej od</string>
@@ -181,7 +181,7 @@
     <string name="_3_month">3 miesiące</string>
     <string name="_6_month">6 miesięcy</string>
     <string name="_1_year">1 rok</string>
-    <string name="all">Wszystkie</string>
+    <string name="all">Wszystko</string>
     <string name="most_played_songs">Najczęściej odtwarzane utwory</string>
     <string name="most_listened_artists">Najchętniej słuchani wykonawcy</string>
     <string name="most_albums_listened">Najczęściej odtwarzane albumy</string>
@@ -192,16 +192,16 @@
     <string name="contributors">KONTRYBUTORZY</string>
     <string name="troubleshooting">ROZWIĄZYWANIE PROBLEMÓW</string>
     <string name="social">SOCIAL</string>
-    <string name="english">English</string>
-    <string name="italian">Italian</string>
-    <string name="czech">Czech</string>
-    <string name="german">German</string>
-    <string name="spanish">Spanish</string>
-    <string name="french">French</string>
-    <string name="romanian">Romanian</string>
-    <string name="russian">Russian</string>
-    <string name="turkish">Turkish</string>
-    <string name="polish">Polish</string>
+    <string name="english">Angielski (English)</string>
+    <string name="italian">Włoski (Italiano)</string>
+    <string name="czech">Czeski (Čeština)</string>
+    <string name="german">Niemiecki (Deutsch)</string>
+    <string name="spanish">Hiszpański (Español)</string>
+    <string name="french">Francuski (Français)</string>
+    <string name="romanian">Rumuński (Română)</string>
+    <string name="russian">Rosyjski (Русский)</string>
+    <string name="turkish">Turecki (Türkçe)</string>
+    <string name="polish">Polski</string>
     <string name="dark">Ciemny</string>
     <string name="system">Systemowy</string>
     <string name="unlimited">Nielimitowane</string>
