--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -201,6 +201,7 @@
     <string name="romanian">Romanian</string>
     <string name="russian">Russian</string>
     <string name="turkish">Turkish</string>
+    <string name="polish">Polish</string>
     <string name="dark">Темный</string>
     <string name="system">Система</string>
     <string name="unlimited">Неограниченный</string>
