Fixed lang on settings page #98 Fixed icon collapse player Added home icon on player page Added new download engine, another step to implement downloadservice Fixed border around button on player #97

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -208,5 +208,6 @@
     <string name="_light">Claro</string>
     <string name="downloaded">Descargado</string>
     <string name="turn_off">Desactivar</string>
+    <string name="download">Download</string>
 
 </resources>
