--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -208,4 +208,5 @@
   <string name="_light">Světlý</string>
   <string name="downloaded">Stažený</string>
   <string name="turn_off">Vypnout</string>
+  <string name="download">Download</string>
 </resources>
