--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -208,4 +208,5 @@
     <string name="_light">Light</string>
     <string name="downloaded">Zwischengespeichert</string>
     <string name="turn_off">Ausschalten</string>
+    <string name="download">Download</string>
 </resources>
