--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -208,4 +208,5 @@
     <string name="_light">Chiaro</string>
     <string name="downloaded">Scaricati</string>
     <string name="turn_off">Disattiva</string>
+    <string name="download">Download</string>
 </resources>
