--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -208,4 +208,5 @@
     <string name="_light">Jasny</string>
     <string name="downloaded">Pobrane</string>
     <string name="turn_off">Wyłącz</string>
+    <string name="download">Download</string>
 </resources>
