--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -208,4 +208,5 @@
     <string name="_light">Светлый</string>
     <string name="downloaded">Загружено</string>
     <string name="turn_off">Выключить</string>
+    <string name="download">Download</string>
 </resources>
