--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -208,4 +208,5 @@
     <string name="_light">Light</string>
     <string name="downloaded">Downloaded</string>
     <string name="turn_off">Turn off</string>
+    <string name="download">Download</string>
 </resources>
